Dil desteği eklendi. Ana Sayfa düzenlendi.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,11 +1,21 @@
 {
     "welcome": "Welcome",
-    "select_language": "Select Language",
+    "select_language_dialog": "Select Language",
     "login": {
         "welcome": "Welcome",
+        "welcome_back": "Welcome Back!",
+        "login_subtitle": "Sign in to continue your learning journey",
         "email": "Email",
         "password": "Password",
-        "login_button": "Login"
+        "email_required": "Please enter your email address",
+        "valid_email": "Please enter a valid email address",
+        "password_required": "Please enter your password",
+        "password_min_length": "Password must be at least 6 characters",
+        "forgot_password": "Forgot Password",
+        "login_button": "Sign In",
+        "google_login": "Sign in with Google",
+        "dont_have_account": "Don't have an account?",
+        "sign_up": "Sign Up"
     },
     "register": {
         "create_account": "Create Account",
@@ -17,10 +27,51 @@
     "google_login": "Login with Google",
     "dont_have_account": "Don't have an account? Register",
     "home": {
-        "title": "Home"
+        "title": "Home",
+        "user": "User",
+        "welcome_user": "Welcome back, {name} 👋",
+        "ready_to_learn": "Ready to learn?",
+        "start_test": "Start Test",
+        "start_test_desc": "Begin solving quizzes now",
+        "select_course": "Select Course",
+        "select_course_desc": "Choose topic",
+        "statistics": "Statistics",
+        "statistics_desc": "Your progress",
+        "stats_title": "Statistics",
+        "total_questions": "Total Questions",
+        "correct_answers": "Correct Answers",
+        "success_rate": "Success Rate",
+        "average_time": "Average Time",
+        "recent_activities": "Recent Activities",
+        "new_badge": "New",
+        "pharmacology_quiz": "Pharmacology",
+        "pharmacology_desc": "Multiple choice questions ready",
+        "terminology_quiz": "Terminology",
+        "terminology_desc": "Fill in the blank questions",
+        "mixed_quiz": "Mixed Quiz",
+        "mixed_desc": "Try different question types",
+        "view_all_quizzes": "View All Quizzes",
+        "recommended": "🌟 Recommended",
+        "start": "Start",
+        "account_verified": "✨ Account Verified!",
+        "account_verified_desc": "You can use all features",
+        "email_verification_needed": "⚠️ Email Verification Required",
+        "email_verification_desc": "You need to verify your email address",
+        "logout_confirm_title": "Log Out",
+        "logout_confirm_message": "Are you sure you want to log out of your account?",
+        "cancel": "Cancel",
+        "logout": "Log Out",
+        "course_selection_coming_soon": "Course selection feature coming soon!",
+        "statistics_coming_soon": "Statistics feature coming soon!",
+        "all_quizzes_coming_soon": "All quizzes feature coming soon!"
     },
     "courses": "Courses", 
     "analysis": "Analysis",
+    "analysis_screen": {
+        "title": "Analysis",
+        "coming_soon": "Your Analytics Will Be Here Soon!",
+        "description": "You will be able to analyze your performance and development in detail."
+    },
     "settings": {
         "title": "Settings",
         "language": "Language",
@@ -67,7 +118,6 @@
     "profile": "Profile",
     "security": "Security",
     "logout": "Logout",
-    "select_language_dialog": "Select Language",
     "select_theme": "Select Theme",
     "system_theme": "System Theme",
     "light_theme": "Light Theme",
