--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -1,11 +1,21 @@
 {
     "welcome": "Hoş Geldiniz",
-    "select_language": "Dil Seçin",
+    "select_language_dialog": "Dil Seçin",
     "login": {
         "welcome": "Hoş Geldiniz",
+        "welcome_back": "Hoş Geldin!",
+        "login_subtitle": "Öğrenmeye devam etmek için giriş yap",
         "email": "E-posta",
         "password": "Şifre",
-        "login_button": "Giriş Yap"
+        "email_required": "Lütfen e-posta adresinizi girin",
+        "valid_email": "Lütfen geçerli bir e-posta adresi girin",
+        "password_required": "Lütfen şifrenizi girin",
+        "password_min_length": "Şifre en az 6 karakter olmalıdır",
+        "forgot_password": "Şifremi Unuttum",
+        "login_button": "Giriş Yap",
+        "google_login": "Google ile Giriş Yap",
+        "dont_have_account": "Hesabınız yok mu?",
+        "sign_up": "Kayıt Ol"
     },
     "register": {
         "create_account": "Hesap Oluştur",
@@ -18,10 +28,51 @@
     "google_login": "Google ile Giriş Yap",
     "dont_have_account": "Hesabınız yok mu?",
     "home": {
-        "title": "Ana Sayfa"
+        "title": "Ana Sayfa",
+        "user": "Kullanıcı",
+        "welcome_user": "Hoş geldin, {name} 👋",
+        "ready_to_learn": "Öğrenmeye hazır mısın?",
+        "start_test": "Teste Başla",
+        "start_test_desc": "Hemen quiz çözmeye başla",
+        "select_course": "Ders Seç",
+        "select_course_desc": "Konu seç",
+        "statistics": "İstatistik",
+        "statistics_desc": "İlerlemen",
+        "stats_title": "İstatistikler",
+        "total_questions": "Toplam Soru",
+        "correct_answers": "Doğru Cevap",
+        "success_rate": "Başarı Oranı",
+        "average_time": "Ortalama Süre",
+        "recent_activities": "Son Aktiviteler",
+        "new_badge": "Yeni",
+        "pharmacology_quiz": "Farmakoloji Quiz",
+        "pharmacology_desc": "Çoktan seçmeli sorular hazır",
+        "terminology_quiz": "Terminoloji Quiz",
+        "terminology_desc": "Boşluk doldurma soruları",
+        "mixed_quiz": "Karma Quiz",
+        "mixed_desc": "Farklı soru tiplerini dene",
+        "view_all_quizzes": "Tüm Quizleri Gör",
+        "recommended": "🌟 Önerilen",
+        "start": "Başla",
+        "account_verified": "✨ Hesabın Doğrulandı!",
+        "account_verified_desc": "Tüm özelliklerden yararlanabilirsin",
+        "email_verification_needed": "⚠️ Email Doğrulaması Gerekli",
+        "email_verification_desc": "Email adresini doğrulaman gerekiyor",
+        "logout_confirm_title": "Çıkış Yap",
+        "logout_confirm_message": "Hesabınızdan çıkış yapmak istediğinizden emin misiniz?",
+        "cancel": "İptal",
+        "logout": "Çıkış Yap",
+        "course_selection_coming_soon": "Ders seçimi özelliği yakında eklenecek!",
+        "statistics_coming_soon": "İstatistik özelliği yakında eklenecek!",
+        "all_quizzes_coming_soon": "Tüm quizler özelliği yakında eklenecek!"
     },
     "courses": "Kurslar",
     "analysis": "Analiz",
+    "analysis_screen": {
+        "title": "Analiz",
+        "coming_soon": "Analizleriniz Yakında Burada!",
+        "description": "Performansınızı ve gelişiminizi detaylı bir şekilde analiz edebileceksiniz."
+    },
     "settings": {
         "title": "Ayarlar",
         "language": "Dil",
@@ -98,7 +149,6 @@
     "privacy_desc": "Veri ve güvenlik ayarları",
     "help_desc": "SSS ve destek",
     "general_settings": "Genel Ayarlar",
-    "select_language_dialog": "Dil Seçin",
     "select_theme": "Tema Seçin",
     "system_theme": "Sistem teması",
     "dark_theme": "Koyu tema",
